--- a/eslzArm/subscriptionTemplates/ascConfiguration.json
+++ b/eslzArm/subscriptionTemplates/ascConfiguration.json
@@ -150,7 +150,7 @@
         }
     },
     "variables": {
-        "resourceGroupName": "[concat(parameters('topLevelManagementGroupPrefix'), '-asc-export')]",
+        "resourceGroupName": "[concat('rg-', parameters('serviceLevel'), '-', parameters('abbreviatedRegion'), '-asc-export')]",
         "resourceGroupLocation": "[deployment().location]",
         "exportedDataTypes": "[createArray('Security recommendations', 'Security alerts', 'Overall secure score', 'Secure score controls', 'Regulatory compliance', 'Overall secure score - snapshot', 'Secure score controls - snapshot', 'Regulatory compliance - snapshot')]",
         "isSecurityFindingsEnabled": true,
