--- a/eslzArm/managementGroupTemplates/policyAssignments/DINE-MDFCConfigPolicyAssignment.json
+++ b/eslzArm/managementGroupTemplates/policyAssignments/DINE-MDFCConfigPolicyAssignment.json
@@ -199,7 +199,7 @@
                         "value": "[parameters('logAnalyticsResourceId')]"
                     },
                     "ascExportResourceGroupName": {
-                        "value": "[concat(parameters('topLevelManagementGroupPrefix'), '-asc-export')]"
+                        "value": "[concat('rg-', parameters('serviceLevel'), '-', parameters('abbreviatedRegion'), '-asc-export')]"
                     },
                     "ascExportResourceGroupLocation": {
                         "value": "[deployment().location]"
